--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:selectionRequired="true"
+        app:singleSelection="true"
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
@@ -38,6 +40,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_group">
 
+        <!--  when setting bpm in code, use stylespan to make "bpm" smaller-->
         <TextView
             android:id="@+id/bpm_text"
             style="@style/TextAppearance.Material3.DisplayLarge"
