--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,7 +19,7 @@
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Age"
+            android:hint="@string/profile_age"
             app:suffixText="years"
             android:layout_marginBottom="8dp">
 
@@ -35,7 +35,7 @@
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Weight"
+            android:hint="@string/profile_weight"
             app:suffixText="kg"
             android:layout_marginBottom="8dp">
 
@@ -51,7 +51,7 @@
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Height"
+            android:hint="@string/profile_height"
             app:suffixText="cm"
             android:layout_marginBottom="8dp">
 
@@ -65,17 +65,17 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Your resting heart rate should be between 60 and 100 bpm." />
+            android:text="@string/profile_info_text_resting_heart_rate" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Your maximum heart rate is approximately 190-200 bpm." />
+            android:text="@string/profile_info_text_maximum_heart_rate" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Your recommended exercise heart rate is 160-180 bpm. " />
+            android:text="@string/profile_info_text_exercise_heart_rate" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
