--- a/app/src/main/res/layout/fragment_measure_settings.xml
+++ b/app/src/main/res/layout/fragment_measure_settings.xml
@@ -11,9 +11,146 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/title_new_measurement" />
 
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/button_group_measurement_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:paddingHorizontal="@dimen/screen_padding_horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:selectionRequired="true"
+        app:singleSelection="true">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_measurement_type_face"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_measurement_type_face" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_measurement_type_finger"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_measurement_type_finger" />
+    </com.google.android.material.button.MaterialButtonToggleGroup>
+
+    <TextView
+        android:id="@+id/measurement_type_description"
+        style="?attr/textAppearanceBodyLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:paddingHorizontal="@dimen/screen_padding_horizontal"
+        android:paddingVertical="8dp"
+        android:text="@string/measurement_type_description_face"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_group_measurement_type" />
+
+    <TextView
+        android:id="@+id/activity_level_prompt"
+        style="?attr/textAppearanceTitleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:paddingHorizontal="@dimen/screen_padding_horizontal"
+        android:paddingVertical="8dp"
+        android:text="@string/activity_level_prompt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/measurement_type_description" />
+
+    <HorizontalScrollView
+        android:id="@+id/scroll_view_activity_level"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/activity_level_prompt">
+
+        <com.google.android.material.button.MaterialButtonToggleGroup
+            android:id="@+id/button_group_activity_level"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="@dimen/screen_padding_horizontal"
+            app:selectionRequired="true"
+            app:singleSelection="true">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_activity_level_relaxed"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_level_relaxed" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_activity_level_seated"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_level_seated" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_activity_level_light_exercise"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_level_light_exercise" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_activity_level_heavy_exercise"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_level_heavy_exercise" />
+        </com.google.android.material.button.MaterialButtonToggleGroup>
+    </HorizontalScrollView>
+
+    <TextView
+        android:id="@+id/measurement_duration_prompt"
+        style="?attr/textAppearanceTitleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:paddingHorizontal="@dimen/screen_padding_horizontal"
+        android:text="@string/measurement_duration_prompt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scroll_view_activity_level" />
+
+    <TextView
+        android:id="@+id/measurement_duration_prompt_subtitle"
+        style="?attr/textAppearanceCaption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:paddingHorizontal="@dimen/screen_padding_horizontal"
+        android:text="@string/measurement_duration_prompt_subtitle"
+        android:textColor="?colorOnSurface"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/measurement_duration_prompt" />
+
+    <de.Maxr1998.modernpreferences.views.ModernSeekBar
+        android:id="@+id/measurement_duration_slider"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:paddingHorizontal="@dimen/screen_padding_horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/measurement_duration_prompt_subtitle"
+        app:layout_constraintWidth_max="@dimen/max_view_width" />
+
     <Button
         android:id="@+id/button_start_measurement"
-        style="@style/Widget.Material3.Button.OutlinedButton"
+        style="?attr/materialButtonOutlinedStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/screen_padding_horizontal"
