--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="MainTheme" parent="Theme.Material3.DayNight.NoActionBar"></style>
+    <style name="MainTheme" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorAccent">?attr/colorOnSurface</item>
+    </style>
 </resources>
