--- a/app/src/main/res/layout/fragment_all_results.xml
+++ b/app/src/main/res/layout/fragment_all_results.xml
@@ -10,10 +10,10 @@
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="All measurements" />
+            app:title="@string/screen_name_all_measurements" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
