--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -11,6 +11,7 @@
         android:id="@+id/btn_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:checkedButton="@id/btn_day"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
