--- a/app/src/main/res/layout/activity_measure.xml
+++ b/app/src/main/res/layout/activity_measure.xml
@@ -30,10 +30,19 @@
         android:layout_marginHorizontal="@dimen/screen_padding_horizontal"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@id/button_barrier"
-        app:layout_constraintDimensionRatio="4:3"
+        app:layout_constraintDimensionRatio="3:4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintWidth_max="@dimen/max_view_width" />
+
+    <edu.uaux.pheart.measure.OverlayView
+        android:id="@+id/overlay"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/camera_preview"
+        app:layout_constraintEnd_toEndOf="@id/camera_preview"
+        app:layout_constraintStart_toStartOf="@id/camera_preview"
+        app:layout_constraintTop_toTopOf="@id/camera_preview" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/button_barrier"
