--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <style name="MainTheme" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorAccent">?attr/colorOnSurface</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 </resources>
