--- a/app/src/main/res/layout/display_bpm.xml
+++ b/app/src/main/res/layout/display_bpm.xml
@@ -18,11 +18,12 @@
 
     <TextView
         android:id="@+id/bpm_label"
+        style="@style/TextAppearance.Material3.BodyLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:letterSpacing="0.2"
         android:text="@string/bpm"
         app:layout_constraintBaseline_toBaselineOf="@id/bpm_text"
-        app:layout_constraintStart_toEndOf="@id/bpm_text"
-        tools:text="BPM" />
+        app:layout_constraintStart_toEndOf="@id/bpm_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
