--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <style name="MainTheme" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:windowLightStatusBar">@bool/is_dark_icons</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 </resources>
