--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
     </style>
 
     <style name="MainTheme" parent="BaseTheme">
-        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowLightStatusBar">true</item>
         <item name="barChartColor">?attr/colorPrimaryContainer</item>
         <item name="barChartHighlightColor">?attr/colorPrimaryVariant</item>
     </style>
