--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -98,6 +98,7 @@
         android:id="@+id/graph"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintHeight_percent="0.3"
         app:layout_constraintTop_toBottomOf="@id/header_recycler" />
 
