--- a/app/src/main/res/layout/display_bpm.xml
+++ b/app/src/main/res/layout/display_bpm.xml
@@ -8,6 +8,7 @@
     <TextView
         android:id="@+id/bpm_text"
         style="@style/TextAppearance.Material3.DisplayLarge"
+        android:textColor="?attr/colorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
