--- a/app/src/main/res/layout/activity_measure_results.xml
+++ b/app/src/main/res/layout/activity_measure_results.xml
@@ -44,15 +44,13 @@
         tools:text="23. March 2022" />
 
 
-    <View
+    <edu.uaux.pheart.measure.HeartRangeView
         android:id="@+id/resting_rating_graph"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="125dp"
 
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="48dp"
-
-        android:background="#ff0000"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
